<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.0.2</version>
    <relativePath></relativePath>
  </parent>
  <groupId>dev.srebootcamp</groupId>
  <artifactId>idValueStore</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <name>idValueStore</name>
  <description>Abstraction for content address id/value store (the id is the sha256 of the byte[] value)</description>
  <properties>
    <java.version>17</java.version>
    <rest.assured.version>5.3.0</rest.assured.version>
    <hamcrest.version>2.2</hamcrest.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
    </dependency>
    <dependency>
      <groupId>dev.srebootcamp</groupId>
      <artifactId>utils</artifactId>
      <version>1.0.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>dev.srebootcamp</groupId>
      <artifactId>audit</artifactId>
      <version>1.0.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>dev.srebootcamp</groupId>
      <artifactId>signedData</artifactId>
      <version>1.0.0-SNAPSHOT</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <systemPropertiesFile>src/test/resources/system_props.properties</systemPropertiesFile>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
